# rust-bc

./: .dockerignore  .env.deploy.example  .gitignore  .pre-commit-config.yaml  BRANCHING_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  Dockerfile  Dockerfile.lite  Dockerfile.prebuilt  Dockerfile.static  ELEVATOR_PITCHES_QUICK.md  ESTADO_ACTUAL_ROADMAP.md  EXECUTIVE_SUMMARY_FOR_SALES.md  FABRIC-GAP-ANALYSIS.md  GITHUB_ISSUES_BULK.md  INFRAESTRUCTURA_Y_DESPLIEGUE.md  LICENSE  LIMPIEZA_PROYECTO.md  MULTI-PEER-ENDORSEMENT.md  ONBOARDING.md  PHASE1_QUICK_START.md  README.md  README_PQC.md  REPOSITORY_SETUP_COMPLETE.md  ROADMAP.md  ROADMAP_NEUROMIGRATION.md  ROADMAP_SUMMARY.txt  SANDBOX.md  SECURITY.md  SERVICIOS_COMERCIALES_API.md  STORAGE_SCHEMA_DESIGN.md  VALUE_PROPOSITION_SALES_PITCH.md  deny.toml  docker-compose.demo.yml  docker-compose.deploy.yml  docker-compose.lite.yml  (+13 more)
.config/: nextest.toml
.github/: CODEOWNERS
ANALYSIS/: 04_NEURO_ARCHITECTURE_NOTES.md  05_TARGET_ARCHITECTURE_BACKEND.md  05_TARGET_ARCHITECTURE_COMPLIANCE.md  05_TARGET_ARCHITECTURE_FRONTEND.md  05_TARGET_ARCHITECTURE_INTEGRATION.md  06_GITHUB_ISSUES_TEMPLATE.md  07_PHASE1_EXECUTIVE_SUMMARY.md  08_TESTING_STRATEGY_PHASE2.md  09_PHASE2_KICKOFF_ROADMAP.md  DECISION_MATRIX_v2.md  PHASE1_STATUS.txt
Documents/: ALCANCES_Y_LIMITACIONES.md  ANALISIS_IMPACTO_SIN_BD.md  ANALISIS_SEGURIDAD_ERC20.md  ANALISIS_TESTS_Y_PROXIMOS_PASOS.md  ANALISIS_VIABILIDAD_PLAN_6_MESES.md  ANALISIS_Y_SOLUCION_21_FALLOS.md  API_DOCUMENTATION.md  BILLING_SISTEMA_IMPLEMENTADO.md  BLOCKCHAIN_SIN_BD_REVOLUCIONARIO.md  CONSENSO_100_PORCIENTO.md  CORRECCIONES_SEGURIDAD.md  DOCKER.md  ESTADO_FASES.md  ESTRATEGIA_RENTABILIZACION.md  EXPLICACION_PARCIALMENTE_RESUELTA.md  FASE1_CAPITALIZACION_COMPLETADA.md  FASE2_VERIFICADA.md  FORTALECIMIENTO_NFT_IMPLEMENTADO.md  GUIA_PRUEBAS_ESTRES.md  GUIA_PRUEBA_P2P.md  GUIA_USUARIO.md  INDICE_DOCUMENTACION.md  LIMITACIONES_AUTO_DISCOVERY.md  MEJORAS_CRITICAS_IMPLEMENTADAS.md  MEJORAS_IMPLEMENTADAS.md  MEJORAS_P2P.md  NETWORK_ID_Y_BOOTSTRAP_IMPLEMENTADOS.md  PENDIENTES_PLAN_6_MESES.md  PERSISTENCIA_CONTRATOS_COMPLETADA.md  PRUEBAS_COMPLETADAS.md  PRUEBAS_SEGURIDAD.md  PRUEBA_P2P_RESULTADOS_FINAL.md  PRUEBA_SISTEMA_RESULTADOS.md  PRÓXIMOS_PASOS.md  README.md  RECOMENDACIONES_FINALES.md  RESULTADOS_FINALES_SEGURIDAD.md  RESULTADOS_PRUEBAS_SINCRONIZACION.md  RESULTADOS_STRESS_TEST_MEJORADO.md  RESULTADOS_TEST_AUTO_DISCOVERY.md  (+11 more)
benches/: ordering_throughput.rs  pqc_performance.rs
block-explorer/: CHANGELOG.md  README.md  README_START.md  next.config.js  package-lock.json  package.json
block-explorer-vite/: .env.example  CHANGELOG.md  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
cerulean-voto/: .env  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
chaincode-sdk/: Cargo.toml  README.md
chaincode-sdk/examples/: asset_transfer.rs
chaincode-sdk/src/: lib.rs
contracts/: kv_store.wat
crates/pqc_crypto_module/: Cargo.toml  DESIGN_DOCUMENT.md  FINITE_STATE_MODEL.md  KEY_MANAGEMENT.md  MODULE_SPECIFICATION.md  NON_APPROVED_USAGE.md  OPERATIONAL_GUIDANCE.md  README.md  SECURITY_POLICY.md  SECURITY_POLICY_DRAFT.md  SELF_TEST_DOCUMENTATION.md
crates/pqc_crypto_module/src/: api.rs  approved_mode.rs  errors.rs  hashing.rs  legacy.rs  lib.rs  mldsa.rs  mlkem.rs  rng.rs  self_tests.rs  types.rs
crates/pqc_crypto_module/tests/: api_boundary.rs  approved_vs_legacy.rs  fips_readiness.rs  key_zeroization.rs  no_fallback.rs  self_tests.rs
deploy/: Caddyfile  generate-tls.sh
docs/: API-COMPLETE-REFERENCE.md  CERULEAN-OVERVIEW.md  COMPLIANCE-FRAMEWORK.md  COTIZACION-VOTO-ELECTRONICO.md  DEMO-SCRIPT.md  DEPLOYMENT.md  FABRIC-COMPARISON.md  FAQ.md  HR-DOCUMENT-VERIFICATION-IMPACT.md  IOTA-GAP-ANALYSIS.md  ISSUE.md  NETWORK_MEMBERSHIP.md  ONE-PAGER-CAMARA.md  PILOT-GUIDE.md  PITCH.md  POR-QUE-CERULEAN.md  PRESENTACION.md  PROMPT.md  PROMPT6.md  PROMPT8.md  PUBLIC-ROADMAP.md  QUE-ES-DLT-EMPRESARIAL.md  QUICK-START.md  README.md  RESUMEN-NO-TECNICO.md  ROADMAP-INTEGRACION-CERULEAN.md  SECURITY-AUDIT-ENGAGEMENT.md  SECURITY-AUDIT-PACKAGE.md  SECURITY-AUDIT.md  STRESS-TEST-REPORT.md  TESSERACT-AXIOMS.md  TESSERACT-COMPARISON.md  TESSERACT-CONSENSUS.md  TESSERACT-CONTRIBUTION.md  TESSERACT-CONVERGENCE.md  TESSERACT-ECONOMICS.md  TESSERACT-FAQ.md  TESSERACT-INCENTIVES.md  TESSERACT-PROOFS.md  TESSERACT-SPACETIME.md  (+8 more)
explorer/: index.html  package.json  tsconfig.json  vite.config.ts
fips_submission/: BUILD_ENVIRONMENT.md  GAP_ANALYSIS.md  LAB_SELECTION.md  TEST_VECTOR_PLAN.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: block_parser.rs  gossip_message_parser.rs  signature_parser.rs
sdks/python/: pyproject.toml
sdks/python/examples/: basic_usage.py
sdks/python/rust_bc/: client.py
sdks/python/tests/: test_client.py  test_types.py
tesseract/: CHANGELOG.md  Cargo.toml  Dockerfile  LIMITATIONS.md  TESSERACT_LIMITATIONS.md  TESSERACT_PROTOCOL.md  TESSERACT_THEOREMS.md  docker-compose.yml
tesseract/agents/: client.py  dp_analysis.py  field_gl.py  field_v2.py  gl_calibrate.py  gl_experiments.py  phase_diagnostics.py  phase_transition.py  phase_transition_v2.py  stress_test.py  test_v2_dynamics.py
tesseract/benches/: scaling.rs
tesseract/spec_tests/: cross_validate.sh  python_results.json  reference_impl.py  rust_results.json  test_vectors.json
tesseract/src/: adversarial.rs  baseline_compare.rs  causality.rs  conservation.rs  contraction.rs  contribution.rs  crystallization.rs  economics.rs  entropy.rs  gossip.rs  gravity.rs  identity.rs  lib.rs  liveness.rs  lyapunov.rs  main.rs  mapper.rs  network_sim.rs  node.rs  p2p.rs  persistence.rs  proof.rs  scaling.rs  sigma_audit.rs  wallet.rs
tesseract/tests/: adversarial_convergence.rs  adversary.rs  agent_coordination.rs  benchmark.rs  causality_integration.rs  curvature.rs  distributed_integration.rs  e2e.rs  evidence_sync.rs  experiments.rs  ledger.rs  monetary.rs  network.rs  network_stress.rs  p2p_e2e.rs  persistence_e2e.rs  scale.rs  spec_vectors.rs
(+797 files in other folders)
