[package]
name = "rust-bc"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
actix-web = "4.5"
actix-cors = "0.7"
actix-rt = "2.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.8"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "test_mining"
path = "src/bin/test_mining.rs"

[[bin]]
name = "benchmark_mining"
path = "src/bin/benchmark_mining.rs"

[[bin]]
name = "compare_mining"
path = "src/bin/compare_mining.rs"

[[bin]]
name = "validate_chain"
path = "src/bin/validate_chain.rs"

