[package]
name = "rust-bc"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
actix-web = { version = "4.5", features = ["rustls-0_23"] }
actix-tls = { version = "3.5", features = ["rustls-0_23"] }
actix-cors = "0.7"
actix-rt = "2.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.8"
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["json", "blocking"] }
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
ethers = { version = "2.0", features = ["rustls"] }
ethers-signers = "2.0"
thiserror = "1.0"
time = { version = "0.3", features = ["std"] }
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
x509-parser = "0.16"
async-trait = "0.1"
futures = "0.3"
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
rocksdb = "0.22"
wasmtime = "21"
actix-ws = "0.3"
raft = { version = "0.7", default-features = false, features = ["default-logger", "prost-codec"] }
prost = "0.11"
cryptoki = { version = "0.7", optional = true }
pqcrypto-mldsa = "0.1.2"
pqcrypto-traits = "0.3"

[features]
default = []
hsm = ["cryptoki"]

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ordering_throughput"
harness = false

[[bin]]
name = "test_mining"
path = "src/bin/test_mining.rs"

[[bin]]
name = "benchmark_mining"
path = "src/bin/benchmark_mining.rs"

[[bin]]
name = "compare_mining"
path = "src/bin/compare_mining.rs"

[[bin]]
name = "validate_chain"
path = "src/bin/validate_chain.rs"

[[bin]]
name = "test_network_security"
path = "src/bin/test_network_security.rs"

[[bin]]
name = "test_transaction_validation"
path = "src/bin/test_transaction_validation.rs"

[[bin]]
name = "mining_worker"
path = "src/bin/mining_worker.rs"

[[bin]]
name = "test_mining_worker"
path = "src/bin/test_mining_worker.rs"

[[bin]]
name = "test_metrics"
path = "src/bin/test_metrics.rs"
