[package]
name = "chaincode-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for writing smart contracts (chaincode) that run on the rust-bc blockchain"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
