[package]
name = "tesseract"
version = "0.1.0"
edition = "2021"
description = "4D probability field — convergence without consensus"

[dependencies]
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
curve25519-dalek = { version = "4", features = ["rand_core"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }

[dev-dependencies]
proptest = "1"
