[package]
name = "pqc_crypto_module"
version = "0.1.0"
edition = "2021"
description = "FIPS-oriented post-quantum cryptographic module for Cerulean Ledger DLT"
license = "MIT"

[dependencies]
pqcrypto-mldsa = "0.1.2"
pqcrypto-traits = "0.3"
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
